one commenter added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="greyBackground">
 	<div class="whiteBackground">
-		<div class="usePost">
+		<div class="userPost">
 			<div class="userInfo">
 				<div class="userProfilePic">
 					<img id="profilePic" src="media/Jon_Loomer_set_to_50_square.png">
@@ -28,30 +28,14 @@
 		</div>	
 		<div class="memberInteractions">
 			<div class="memberInteractions__likeBar">
-			Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Comment<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Share
+			Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span>Comment<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span>Share
 			</div>
 			<div class="memberInteractions__blakeJamiesonLike">Blake Jamieson<span class="memberInteractions__blakeJamiesonLike--dark">&nbsp;likes this.</span></div>
 			<div class="memberInteractions__commenter">
 				<img id="memberPic1" src="media/Blake_Jamieson_Set_to_30_Square.png">	
 				<div class="memberInteractions__comment">
 					<div class="memberInteractions__commentContent">Blake Jamieson<span class="memberInteractions__commentContent--dark">&nbsp;#iseeit</span></div>
-					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">&nbsp;4 minutes ago</span>
-					</div>
-				</div>
-			</div>
-			<div class="memberInteractions__commenter">
-				<img id="memberPic2" src="media/Emeric_Ernoult_set_to_30_square.png">	
-				<div class="memberInteractions__comment">
-					<div class="memberInteractions__commentContent">Emeric Ernoult<span class="memberInteractions__commentContent--dark">&nbsp;I do!</span></div>
-					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">&nbsp;a few seconds ago via mobile</span>
-					</div>
-				</div>
-			</div>
-			<div class="memberInteractions__commenter">
-				<img id="memberPic3" src="media/Jon_Loomer_Set_to_30_Square.png">	
-				<div class="memberInteractions__comment">
-					<div class="memberInteractions__commentContent"></div>
-					<div class="memberInteractions__commentDetails">
+					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">4 minutes ago</span>
 					</div>
 				</div>
 			</div>
