--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 					</div>
 				</div>
 			</div>
+			<div class="memberInteractions__commenter">
+				<img id="memberPic2" src="media/Emeric_Ernoult_set_to_30_square.png">	
+				<div class="memberInteractions__comment">
+					<div class="memberInteractions__commentContent">Emeric Ernoult<span class="memberInteractions__commentContent--dark">&nbsp;I do!</span></div>
+					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">a few seconds ago via mobile</span>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="userInteractions">
 		</div>
