--- a/index.html
+++ b/index.html
@@ -47,8 +47,17 @@
 					</div>
 				</div>
 			</div>
+			<div class="memberInteractions__commenter">
+				<img id="memberPic3" src="media/Jon_Loomer_Set_to_30_Square.png">	
+				<div class="memberInteractions__comment">
+					<div class="memberInteractions__commentContent"></div>
+					<div class="memberInteractions__commentDetails"></div>
+				</div>
+			</div>
 		</div>
 		<div class="userInteractions">
+			<div class="userInteractions__views">4 people saw this post</div>
+			<div class="userInteractions__boost">boost</div>
 		</div>
 	</div>
 </div>
