almost done with design

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 		</div>
 		<div class="userInteractions">
 			<div class="userInteractions__views">4 people saw this post</div>
-			<div class="userInteractions__boost">boost</div>
+			<div class="userInteractions__boost">
+				<img id="megaphone" src="media/megaphone.png">
+				<div class="userInteractions__boostText">&nbsp;Boost Post&nbsp;&nbsp;</div>
+				<i class="fa fa-caret-down fa-lg" aria-hidden="true"></i>
+			</div>
 		</div>
 	</div>
 </div>
