--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 			<div class="memberInteractions__likeBar">
 			Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span>Comment<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span>Share
 			</div>
-			<div class="memberInteractions__blakeJamiesonLike">Blake Jamieson<span class="memberInteractions__blakeJamiesonLike--dark">&nbsp;likes this.</span></div>
+			<div class="memberInteractions__blakeJamieson">
+				<img id="thumb" src="media/thumb.png">
+				<div class="memberInteractions__blakeJamiesonLike">&nbsp;Blake Jamieson<span class="memberInteractions__blakeJamiesonLike--dark">&nbsp;likes this.</span></div>
+			</div>
 			<div class="memberInteractions__commenter">
 				<img id="memberPic1" src="media/Blake_Jamieson_Set_to_30_Square.png">	
 				<div class="memberInteractions__comment">
@@ -47,11 +50,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="memberInteractions__commenter">
+			<div class="memberInteractions__commenter--placeholder">
 				<img id="memberPic3" src="media/Jon_Loomer_Set_to_30_Square.png">	
 				<div class="memberInteractions__comment">
-					<div class="memberInteractions__commentContent"></div>
-					<div class="memberInteractions__commentDetails"></div>
+					<div class="memberInteractions__commentBox">Write a comment...</div>
 				</div>
 			</div>
 		</div>
