--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<!--  <script type="text/javascript" src="global.js"></script> -->
+ <script type="text/javascript" src="global.js"></script>
  <link rel="stylesheet" type="text/css" href="global.css">
  <script src="https://use.fontawesome.com/b80436529a.js"></script>
  <title>graduation assessment</title>
@@ -38,7 +38,7 @@
 				<img id="memberPic1" src="media/Blake_Jamieson_Set_to_30_Square.png">	
 				<div class="memberInteractions__comment">
 					<div class="memberInteractions__commentContent">Blake Jamieson<span class="memberInteractions__commentContent--dark">&nbsp;#iseeit</span></div>
-					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">4 minutes ago</span>
+					<div class="memberInteractions__commentDetails"><span id="likeButton1">Like</span><span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><img id="thumb" src="media/thumb.png">&nbsp;<span id="comment1Likes">5</span><span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">4 minutes ago</span>
 					</div>
 				</div>
 			</div>
@@ -46,13 +46,12 @@
 				<img id="memberPic2" src="media/Emeric_Ernoult_set_to_30_square.png">	
 				<div class="memberInteractions__comment">
 					<div class="memberInteractions__commentContent">Emeric Ernoult<span class="memberInteractions__commentContent--dark">&nbsp;I do!</span></div>
-					<div class="memberInteractions__commentDetails">Like<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><span class="memberInteractions__commentDetails--dark">a few seconds ago via mobile</span>
+					<div class="memberInteractions__commentDetails"><span id="likeButton2">Like</span><span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;  </span>Reply<span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span><img id="thumb" src="media/thumb.png">&nbsp;<span id="comment2Likes">2</span><span class="memberInteractions__bullet">&nbsp;&nbsp;&#8226;&nbsp;&nbsp;</span></span><span class="memberInteractions__commentDetails--dark">a few seconds ago via mobile</span>
 					</div>
 				</div>
 			</div>
 			<div class="memberInteractions__commenter--placeholder">
-				<img id="memberPic3" src="media/Jon_Loomer_Set_to_30_Square.png">	
-				<div class="memberInteractions__comment">
+				<img id="memberPic3" src="media/Jon_Loomer_Set_to_30_Square.png"><div class="memberInteractions__comment">
 					<div class="memberInteractions__commentBox">Write a comment...</div>
 				</div>
 			</div>
